@@ -1,3 +1,6 @@
+3656.	[bug]		Treat a all zero netmask as invalid when generating
+			the localnets acl. [RT #34687]
+
 	--- 9.9.4 released ---
 
 3643.	[doc]		Clarify RRL "slip" documentation.
